--- a/filesharingsites.html
+++ b/filesharingsites.html
@@ -299,6 +299,31 @@
         </div>
       </article>
 
+      <article class="card" tabindex="0" data-name="gigafile" data-tags="временно,до 300 ГБ,100 дней,temporary">
+        <h3>Gigafile</h3>
+        <div class="meta">
+          <span class="tag">временно</span>
+          <span class="tag"><strong>до 300 ГБ</strong></span>
+          <span class="tag">100 дней</span>
+        </div>
+        <div class="links">
+          <a class="btn primary open" href="https://gigafile.nu/" target="_blank" rel="noopener">Открыть</a>
+          <button class="btn copy" data-domain="https://gigafile.nu/">Копировать</button>
+        </div>
+      </article>
+
+      <article class="card" tabindex="0" data-name="wgetz" data-tags="навсегда,прямая ссылка,permanent,direct">
+        <h3>Wgetz</h3>
+        <div class="meta">
+          <span class="tag"><strong>навсегда</strong></span>
+          <span class="tag">прямая ссылка</span>
+        </div>
+        <div class="links">
+          <a class="btn primary open" href="https://wgetz.com/" target="_blank" rel="noopener">Открыть</a>
+          <button class="btn copy" data-domain="https://wgetz.com/">Копировать</button>
+        </div>
+      </article>
+
     </section>
   </main>
 
@@ -383,4 +408,4 @@
     applyFilter();
   </script>
 </body>
-            </html>
+</html>
