--- a/freevds.html
+++ b/freevds.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Склад данных 💾</title>
+  <title>Free VDS</title>
   <style>
     :root{
       --bg-1: #c9f0d7;
@@ -33,6 +33,13 @@
       max-width:1100px;
       margin:0 auto;
       padding:20px;
+      text-align: center;
+    }
+    
+    h1 {
+        margin-bottom: 32px;
+        font-size: 2.5em;
+        color: #08321a;
     }
 
     .organic-nav{
@@ -130,11 +137,11 @@
 </head>
 <body>
   <div class="container">
-    <nav class="organic-nav" aria-label="Склад данных 💾">
-      <a href="https://kagekao666.github.io/freevds.html" target="_blank" rel="noopener noreferrer">Free VDS</a>
-      <a href="https://kagekao666.github.io/other.html" target="_blank" rel="noopener noreferrer">Другое</a>
-      <a href="https://kagekao666.github.io/filesharingsites.html" target="_blank" rel="noopener noreferrer">Файлообменники</a>
-      <a href="https://kagekao666.github.io/ai.html" target="_blank" rel="noopener noreferrer">AI</a>
+    <h1>Free VDS</h1>
+    <nav class="organic-nav" aria-label="Список бесплатных VDS">
+      <a href="https://h2.nexus/cli" target="_blank" rel="noopener noreferrer">h2.nexus (15 минут)</a>
+      <a href="https://terminator.aeza.net/ru/" target="_blank" rel="noopener noreferrer">terminator.aeza.net (15 минут)</a>
+      <a href="https://ultravds.com/" target="_blank" rel="noopener noreferrer">ultravds.com (3 дня)</a>
     </nav>
   </div>
 </body>
