--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body class="centered-layout">
   <div class="container">
     <nav class="organic-nav" aria-label="Склад данных 💾">
-      <a href="https://kagekao666.github.io/freevds.html" target="_blank" rel="noopener noreferrer">Free VDS</a>
-      <a href="https://kagekao666.github.io/other.html" target="_blank" rel="noopener noreferrer">Другое</a>
-      <a href="https://kagekao666.github.io/filesharingsites.html" target="_blank" rel="noopener noreferrer">Файлообменники</a>
-      <a href="https://kagekao666.github.io/ai.html" target="_blank" rel="noopener noreferrer">AI</a>
-      <a href="https://kagekao666.github.io/freevirtualnumbers.html" target="_blank" rel="noopener noreferrer">FVN</a>
+      <a href="https://kagekao.github.io/freevds.html" target="_blank" rel="noopener noreferrer">Free VDS</a>
+      <a href="https://kagekao.github.io/other.html" target="_blank" rel="noopener noreferrer">Другое</a>
+      <a href="https://kagekao.github.io/filesharingsites.html" target="_blank" rel="noopener noreferrer">Файлообменники</a>
+      <a href="https://kagekao.github.io/ai.html" target="_blank" rel="noopener noreferrer">AI</a>
+      <a href="https://kagekao.github.io/freevirtualnumbers.html" target="_blank" rel="noopener noreferrer">FVN</a>
     </nav>
   </div>
 </body>
