--- a/other.html
+++ b/other.html
@@ -20,6 +20,7 @@
       <a href="https://bridges.torproject.org/options" target="_blank" rel="noopener">Tor Bridges</a>
       <a href="https://markdownvisualizer.vercel.app/" target="_blank" rel="noopener">Markdown</a>
       <a href="https://ru.savefrom.net/245lU/" target="_blank" rel="noopener">SaveFrom</a>
+      <a href="https://git-rawify.vercel.app/" target="_blank" rel="noopener">GIT.RAW</a>
     </nav>
   </div>
 </body>
