--- a/freevirtualnumbers.html
+++ b/freevirtualnumbers.html
@@ -16,6 +16,9 @@
       <a href="https://tempnumbernow.com/" target="_blank" rel="noopener noreferrer">tempnumbernow.com</a>
       <a href="https://onlinesim.online/ru" target="_blank" rel="noopener noreferrer">onlinesim.online</a>
       <a href="https://sms-activate.ru/freeNumbers" target="_blank" rel="noopener noreferrer">sms-activate.ru</a>
+      <a href="https://verifysmsfree.com/" target="_blank" rel="noopener noreferrer">verifysmsfree.com</a>
+      <a href="https://www.textverified.com/free" target="_blank" rel="noopener noreferrer">textverified.com</a>
+      <a href="https://oksms.org/" target="_blank" rel="noopener noreferrer">oksms.org</a>
     </nav>
   </div>
 </body>
