--- a/filesharingsites.html
+++ b/filesharingsites.html
@@ -56,6 +56,17 @@
         </div>
       </article>
       
+      <article class="card" tabindex="0" data-name="litterbox" data-tags="временно,до 128 мб,прямая ссылка,temporary,direct">
+        <div class="card-content">
+          <h3>Uguu</h3>
+          <div class="meta"><span class="tag">до 128 мб</span><span class="tag">прямая ссылка</span></div>
+        </div>
+        <div class="links">
+          <a class="btn open" href="https://uguu.se/" target="_blank" rel="noopener">Открыть</a>
+          <button class="btn copy" data-domain="https://uguu.se/">Копировать</button>
+        </div>
+      </article>
+      
       <article class="card" tabindex="0" data-name="temp ilyxa05" data-tags="временно,до 2 ГБ,до 7 дней,temporary,direct">
         <div class="card-content">
           <h3>Temp Ilyxa05</h3>
