--- a/filesharingsites.html
+++ b/filesharingsites.html
@@ -48,7 +48,7 @@
       <article class="card" tabindex="0" data-name="litterbox" data-tags="временно,до 1 ГБ,прямая ссылка,temporary,direct">
         <div class="card-content">
           <h3>Litterbox</h3>
-          <div class="meta"><span class="tag">до 1 ГБ</span><span class="tag">прямая ссылка</span></div>
+          <div class="meta"><span class="tag">до 1 ГБ</span><span class="tag">прямая ссылка</span><span class="tag">до 3 часов</span></div>
         </div>
         <div class="links">
           <a class="btn open" href="https://litterbox.catbox.moe" target="_blank" rel="noopener">Открыть</a>
@@ -59,7 +59,7 @@
       <article class="card" tabindex="0" data-name="litterbox" data-tags="временно,до 128 мб,прямая ссылка,temporary,direct">
         <div class="card-content">
           <h3>Uguu</h3>
-          <div class="meta"><span class="tag">до 128 мб</span><span class="tag">прямая ссылка</span></div>
+          <div class="meta"><span class="tag">до 128 мб</span><span class="tag">прямая ссылка</span><span class="tag">до 3 часов</span></div>
         </div>
         <div class="links">
           <a class="btn open" href="https://uguu.se/" target="_blank" rel="noopener">Открыть</a>
