--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <a href="https://kage-kao.github.io/freevds.html" target="_blank" rel="noopener noreferrer">Free VDS</a>
       <a href="https://kage-kao.github.io/other.html" target="_blank" rel="noopener noreferrer">Другое</a>
       <a href="https://kage-kao.github.io/filesharingsites.html" target="_blank" rel="noopener noreferrer">Файлообменники</a>
-      <a href="https://kage-kao.github.io/ai.html" target="_blank" rel="noopener noreferrer">AI</a>
+      <a href="https://kage-kao.github.io/ai" target="_blank" rel="noopener noreferrer">AI</a>
       <a href="https://kage-kao.github.io/freevirtualnumbers.html" target="_blank" rel="noopener noreferrer">FVN</a>
     </nav>
   </div>
