--- a/freevirtualnumbers.html
+++ b/freevirtualnumbers.html
@@ -19,6 +19,7 @@
       <a href="https://verifysmsfree.com/" target="_blank" rel="noopener noreferrer">verifysmsfree.com</a>
       <a href="https://www.textverified.com/free" target="_blank" rel="noopener noreferrer">textverified.com</a>
       <a href="https://oksms.org/" target="_blank" rel="noopener noreferrer">oksms.org</a>
+      <a href="https://receive-sms.cc/" target="_blank" rel="noopener noreferrer">receive-sms.cc</a>
     </nav>
   </div>
 </body>
