--- a/all.html
+++ b/all.html
@@ -14,6 +14,7 @@
       <a href="https://kage-kao.github.io/filesharingsites" target="_blank" rel="noopener noreferrer">Файлообменники</a>
       <a href="https://kage-kao.github.io/ai" target="_blank" rel="noopener noreferrer">AI</a>
       <a href="https://kage-kao.github.io/freevirtualnumbers" target="_blank" rel="noopener noreferrer">FVN</a>
+      <a href="https://kage-kao.github.io/prompts" target="_blank">Промты</a>
     </nav>
   </div>
 </body>
