--- a/other.html
+++ b/other.html
@@ -21,7 +21,7 @@
       <a href="https://markdownvisualizer.vercel.app/" target="_blank" rel="noopener">Markdown</a>
       <a href="https://ru.savefrom.net/245lU/" target="_blank" rel="noopener">SaveFrom</a>
       <a href="https://git-rawify.vercel.app/" target="_blank" rel="noopener">GIT.RAW</a>
-      <a href="https://ohmyimages.com/" target="_blank" rel="noopener">Oh My Images</a>
+      <a href="я прилетел к тебе что бы сказать тебе привет" target="_blank" rel="noopener">я прилетел к тебе что бы сказать тебе привет</a>
     </nav>
   </div>
 </body>
