--- a/ai.html
+++ b/ai.html
@@ -10,6 +10,7 @@
   <div class="container">
     <nav class="organic-nav" aria-label="AI links">
       <a href="https://venice.ai/" target="_blank" rel="noopener noreferrer">AI без цензуры</a>
+      <a href="https://app.emergent.sh/register?ref=1833738103" target="_blank" rel="noopener noreferrer">Emergent</a>
       <a href="https://aistudio.google.com" target="_blank" rel="noopener noreferrer">AiStudio</a>
       <a href="https://chatgpt.com/" target="_blank" rel="noopener noreferrer">ChatGPT</a>
       <a href="https://claude.ai/" target="_blank" rel="noopener noreferrer">Claude</a>
