--- a/other.html
+++ b/other.html
@@ -16,7 +16,7 @@
       <a href="https://youtube-thumbnail-downloader.github.io/" target="_blank" rel="noopener">Обложка YouTube</a>
       <a href="https://yt5s.biz/ru/" target="_blank" rel="noopener">Скачать видео</a>
       <a href="https://ttsfree.com/text-to-speech/ru" target="_blank" rel="noopener">Текст в речь</a>
-      <a href="https://smailpro.com/temp-gmail" target="_blank" rel="noopener">Временная почта</a>
+      <a href="https://emailmux.com/" target="_blank" rel="noopener">Временная почта</a>
       <a href="https://bridges.torproject.org/options" target="_blank" rel="noopener">Tor Bridges</a>
       <a href="https://markdownvisualizer.vercel.app/" target="_blank" rel="noopener">Markdown</a>
       <a href="https://ru.savefrom.net/245lU/" target="_blank" rel="noopener">SaveFrom</a>
