--- a/other.html
+++ b/other.html
@@ -14,7 +14,7 @@
       <a href="https://cloudconvert.com/m4a-to-mp3" target="_blank" rel="noopener">Конвертер аудио</a>
       <a href="https://www.pixelcut.ai/ru/ai-image-editor?tool=removeBackground" target="_blank" rel="noopener">Удаление фона</a>
       <a href="https://youtube-thumbnail-downloader.github.io/" target="_blank" rel="noopener">Обложка YouTube</a>
-      <a href="https://yt5s.biz/ru/" target="_blank" rel="noopener">Скачать видео</a>
+      <a href="https://yt5s.in/" target="_blank" rel="noopener">Скачать видео</a>
       <a href="https://ttsfree.com/text-to-speech/ru" target="_blank" rel="noopener">Текст в речь</a>
       <a href="https://emailmux.com/" target="_blank" rel="noopener">Временная почта</a>
       <a href="https://bridges.torproject.org/options" target="_blank" rel="noopener">Tor Bridges</a>
